--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,10 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
     <script src="js/app.js"></script>
-</head>
+    <link rel="stylesheet" type="text/css" href="css/app.css"></head>
 <body>
 <br/>
+<h3>Testing simple data binding...</h3>
 <div>
     <b ng-init='yourName = "Ravi Byakod"' ng-hide=true>Hello, {{ name }}</b>
 
@@ -14,6 +15,7 @@
 </div>
 <p> name here : {{ name }}</p>
 
+<h3>Testing binding with a controller....</h3>
 
 <div ng-controller="MyController">
 
@@ -41,6 +43,7 @@
 </div>
 </br>
 
+<h2>Testing two-way binding....</h2>
 <div ng-controller="CountController">
     <button ng-click="add(1)" class="button">Add</button>
     <button ng-click="subtract(1)" class="button">Subtract</button>
@@ -48,6 +51,8 @@
 </div>
 
 <br/>
+
+<h2>Testing two-way binding with input from user</h2>
 <div ng-controller="CountAmountController">
     <input type="text" ng-model="amount" value="1" placeholder="Enter an amount"><br/>
     <button ng-click="add(amount)" class="button">Add</button>
@@ -56,6 +61,33 @@
 </div>
 
 <br/>
+<h2>Testing inheritance ... of scope variables .. no effect of inheritance </h2>
+<div  ng-controller="ParentController">
+    <input type="text" ng-model="title" placeholder="Enter a parent title"><br/>
+    <div ng-controller="ChildController">
+        <input type="text" ng-model="title"  placeholder="Enter a child title">
+        <input type="text" ng-model="childTitle"  placeholder="Enter a child title"><br/>
+    </div>
+</div>
+<br/>
+<br/>
+
+
+<h2>Testing inheritance ... of scope variables ...how to inherit... </h2>
+<div  ng-controller="ParentController2">
+    <input type="text" ng-model="model.title" placeholder="Enter a parent title2"><br/>
+    <div ng-controller="ChildController2">
+        <input type="text" ng-model="model.title"  placeholder="Enter a child title2">
+        <input type="text" ng-model="childTitle"  placeholder="Enter a child title2"><br/>
+    </div>
+</div>
+<br/>
+<br/>
+
+
+
+<!-- angular formly stuff   ------>
+
 
 </body>
 </html>
